--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -182,6 +182,19 @@ a {
     justify-content: space-between;
 }
 
+.clients .images a {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0 42px;
+    height: 90px;
+    border-radius: 12px;
+}
+
+.clients .images a:hover {
+    box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.10);
+}
+
 /* ========== Guides ========== */
 .guides {
     margin-top: 40px;
