--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -50,7 +50,15 @@ a {
 }
 
 /* ========== Header ========== */
-.header {
+.header-fixed {
+    padding-top: 26px;
+    background: #E6F0FF;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+
+.hero-wrap {
     background: #E6F0FF;
     height: 100vh;
     position: relative;
@@ -64,7 +72,8 @@ a {
 }
 
 .navbar {
-    padding-top: 38px;
+    /* padding-top: 38px; */
+    padding: 12px 0;
     display: flex;
     align-items: center;
 }
@@ -116,7 +125,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
 }
 
 .hero .info {
