--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -60,7 +60,7 @@ a {
 
 .hero-wrap {
     background: #E6F0FF;
-    height: 100vh;
+    height: calc(100vh - 90px);
     position: relative;
 }
 
@@ -72,7 +72,6 @@ a {
 }
 
 .navbar {
-    /* padding-top: 38px; */
     padding: 12px 0;
     display: flex;
     align-items: center;
